--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "publish": false,
   "version": "0.1.0",
   "author": "Eduardo Pinho <eduardopinho@bmd-software.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Enet4/simple-dicom-viewer"
+  },
+  "engines": {
+    "node": ">=16",
+    "npm": ">= 7"
+  },
   "main": "pkg/index.js",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
@@ -11,10 +19,10 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.1.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "rimraf": "^3.0.0",
-    "webpack": "~5.72.0",
-    "webpack-cli": "^4.9.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "rimraf": "^5.0.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.9.0"
   }
 }
